# posuto-server/src/models/PostModel.js
@@ -1,11 +1,11 @@
 import mongoose from 'mongoose';
 
-// const PositionSchema = new mongoose.Schema({
-//   'gs-w': String,
-//   'gs-h': String,
-//   'gs-x': String,
-//   'gs-y': String,
-// });
+const PositionSchema = new mongoose.Schema({
+  width: Number,
+  height: Number,
+  x: Number,
+  y: Number,
+});
 const postSchema = new mongoose.Schema(
   {
     title: {
@@ -15,13 +15,11 @@ const postSchema = new mongoose.Schema(
       maxlength: 50,
     },
     contents: String,
-    position: {
-      'gs-w': Number,
-      'gs-h': Number,
-      'gs-x': Number,
-      'gs-y': Number,
+    position: [PositionSchema],
+    isEditing: {
+      type: Boolean,
+      default: true,
     },
-    color: String,
     createdBy: {
       type: mongoose.SchemaTypes.ObjectId,
       ref: 'Users',
